--- a/stylesheet.css
+++ b/stylesheet.css
@@ -74,5 +74,5 @@ body {
     overflow: hidden;
     background-color: #333;
     font-family: Arial, Helvetica, sans-serif;
-    alignmen:centre;
+    margin: auto;
 }
