--- a/stylesheet.css
+++ b/stylesheet.css
@@ -74,5 +74,6 @@ body {
     overflow: hidden;
     background-color: #333;
     font-family: Arial, Helvetica, sans-serif;
-    margin: auto;
+    text-align:center;
+    color:white;
 }
